packages/v1/CHANGELOG.md
# @sectorone/sdk

## 5.0.16

### Patch Changes

- 00f56c8: set sjoe address for monad
- b713a00: set JOE address for monad

## 5.0.15

### Patch Changes

- d470bab: set v1 monad addresses

## 5.0.14

### Patch Changes

- Updated dependencies [7a40830]
- Updated dependencies [f0683b0]
  - @sectorone/sdk-core@2.0.13

## 5.0.13

### Patch Changes

- 1f4ce37: add monad
- Updated dependencies [1f4ce37]
  - @sectorone/sdk-core@2.0.12

## 5.0.12

### Patch Changes

- 0e5f72b: add sonic
- Updated dependencies [0e5f72b]
  - @sectorone/sdk-core@2.0.11

## 5.0.11

### Patch Changes

- 85276fe: fix monad testnet addresses

## 5.0.10

### Patch Changes

- ab05c71: add monad testnet addresses
- Updated dependencies [ab05c71]
  - @sectorone/sdk-core@2.0.10

## 5.0.9

### Patch Changes

- a1e9168: add solana
- Updated dependencies [a1e9168]
  - @sectorone/sdk-core@2.0.9

## 5.0.8

### Patch Changes

- 0aa58fe: add monad testnet
- Updated dependencies [0aa58fe]
  - @sectorone/sdk-core@2.0.8

## 5.0.7

### Patch Changes

- 366535f: add base network
- Updated dependencies [366535f]
  - @sectorone/sdk-core@2.0.7

## 5.0.6

### Patch Changes

- Updated dependencies [3a8328f]
  - @sectorone/sdk-core@2.0.6

## 5.0.5

### Patch Changes

- 6af01a8: add berachain mainnet
- Updated dependencies [6af01a8]
  - @sectorone/sdk-core@2.0.5

## 5.0.4

### Patch Changes

- Updated dependencies [cdcf75e]
  - @sectorone/sdk-core@2.0.4

## 5.0.3

### Patch Changes

- 06fc276: add berachain artio
- Updated dependencies [06fc276]
  - @sectorone/sdk-core@2.0.3

## 5.0.2

### Patch Changes

- 76fb1d0: fix vite
- Updated dependencies [76fb1d0]
  - @sectorone/sdk-core@2.0.2

## 5.0.1

### Patch Changes

- 6e905b7: bump viem to v2
- Updated dependencies [6e905b7]
  - @sectorone/sdk-core@2.0.1

## 5.0.0

### Major Changes

- 9ab3159: add mantle chain id

### Patch Changes

- Updated dependencies [9ab3159]
  - @sectorone/sdk-core@2.0.0

## 4.1.2

### Patch Changes

- 8a0aa52: update boring helper address

## 4.1.1

### Patch Changes

- 3dfd4a5: update farm lens v2 address

## 4.1.0

### Minor Changes

- 8065d41: Add support for Ethereum

### Patch Changes

- Updated dependencies [8065d41]
  - @sectorone/sdk-core@1.1.0

## 4.0.8

### Patch Changes

- 2f2e1c4: Package release from mono-repo
- Updated dependencies [2f2e1c4]
  - @sectorone/sdk-core@1.0.1
